--- a/CRMLibrary.UI/Views/Home/Index.cshtml
+++ b/CRMLibrary.UI/Views/Home/Index.cshtml
@@ -21,6 +21,7 @@
                     <th>Summary</th>
                     <th>Location</th>
                     <th>IsAvailable</th>
+                    <th>Manage</th>
                 </tr>
                 @foreach (BookViewModel book in Model)
                 {
@@ -33,45 +34,16 @@
                         <td>@book.Summary</td>
                         <td>@book.Location</td>
                         <td>@book.IsAvailable</td>
+                        <td align="center">
+                            <a asp-controller="Home" asp-action="Edit" asp-route-id="@book.Id" class="btn btn-xs btn-success" style="margin: 5px">Edit</a>
+                            <br />
+                            <a asp-controller="Home" asp-action="Look" asp-route-id="@book.Id" class="btn btn-xs btn-info" style="margin: 5px">Look</a>
+                        </td>
                     </tr>
                 }
             </table>
         </div>
-        <br />
-        @*<div id="tblUser" class="carousel slide" data-ride="carousel" data-interval="6000">
-            <table border="1">
-                <br />
-                <tr>
-                    <th>Id</th>
-                    <th>Name</th>
-                    <th>SurName</th>
-                    <th>INN</th>
-                    <th>Address</th>
-                    <th>Phone</th>
-                    <th>Birthday</th>
-                    <th>Email</th>
-                    <th>IdUserTypes</th>
-                    <th>IdLibrary</th>
-                    <th>IdDirector</th>
-                </tr>
-                @foreach (UserViewModel user in ViewBag.Users)
-                {
-                    <tr>
-                        <td>@user.Id</td>
-                        <td>@user.Name</td>
-                        <td>@user.SurName</td>
-                        <td>@user.Inn</td>
-                        <td>@user.Address</td>
-                        <td>@user.Phone</td>
-                        <td>@user.Birthday</td>
-                        <td>@user.Email</td>
-                        <td>@user.IdUserTypes</td>
-                        <td>@user.IdLibrary</td>
-                        <td>@user.IdDirector</td>
-                    </tr>
-                }
-            </table>
-        </div>*@
+        <br />        
     }
     else
     {
