Deleted some comments and edited the project.

--- a/CRMLibrary.UI/Views/Auth/Register.cshtml
+++ b/CRMLibrary.UI/Views/Auth/Register.cshtml
@@ -10,7 +10,7 @@
     <div asp-validation-summary="All" class="alert alert-danger"></div>
 }
 
-<form class="form" method="post" novalidate>
+<form class="form" method="post">
     <h2 class="form-heading">Please register</h2>
     <label for="inputName" class="sr-only">Name</label>
     <input type="text" asp-for="Name" id="inputName" class="form-control first" placeholder="Name" required autofocus />
