--- a/CRMLibrary.UI/Views/Auth/LogIn.cshtml
+++ b/CRMLibrary.UI/Views/Auth/LogIn.cshtml
@@ -10,7 +10,7 @@
     <div asp-validation-summary="All" class="alert alert-danger"></div>
 }
 
-<form class="form" method="post" novalidate>
+<form class="form" method="post">
     <h2 class="form-heading">Please sign in</h2>
     <label for="inputEmail" class="sr-only">Email address</label>
     <input type="email" asp-for="Email" id="inputEmail" class="form-control first" placeholder="Email address" required autofocus />
