--- a/CRMLibrary.UI/Views/Home/Index.cshtml
+++ b/CRMLibrary.UI/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
             <a href="javascript:document.forms[0].submit()" class="btn btn-lg btn-primary">Log Out</a>
         </form>
         <div id="tblBook" class="carousel slide" data-ride="carousel" data-interval="6000">
-            <table border="1">
+            <table class="table table-striped" border="1">
                 <br />
                 <tr>
                     <th>Id</th>
