--- a/CRMLibrary.UI/Views/Auth/LogIn.cshtml
+++ b/CRMLibrary.UI/Views/Auth/LogIn.cshtml
@@ -10,14 +10,34 @@
     <div asp-validation-summary="All" class="alert alert-danger"></div>
 }
 
-<form class="form" method="post">
-    <h2 class="form-heading">Please sign in</h2>
-    <label for="inputEmail" class="sr-only">Email address</label>
-    <input type="email" asp-for="Email" id="inputEmail" class="form-control first" placeholder="Email address" required autofocus />
-    <label for="inputPassword" class="sr-only">Password</label>
-    <input type="password" asp-for="Password" id="inputPassword" class="form-control last" placeholder="Password" required />
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Log in</button>
-</form>
+<div class="card">
+    <article class="card-body">
+        <h4 class="card-title text-center mb-4 mt-1">Sign in</h4>
+        <hr>
+        <form method="post">
+            <div class="form-group">
+                <div class="input-group">
+                    <div class="input-group-addon">
+                        <span class="input-group-sm"> <i class="fa fa-user"></i> </span>
+                    </div>
+                    <input type="email" asp-for="Email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus />
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="input-group">
+                    <div class="input-group-addon">
+                        <span class="input-group-sm"> <i class="fa fa-lock"></i> </span>
+                    </div>
+                    <input type="password" asp-for="Password" id="inputPassword" class="form-control" placeholder="Password" required />
+                </div>
+            </div>
+            <div class="form-group">
+                <button class="btn btn-lg btn-primary btn-block" type="submit">Log in</button>
+            </div>
+            <p class="text-center"><a href="#" class="btn">Forgot password?</a></p>
+        </form>
+    </article>
+</div>
 
 <hr />
 
