--- a/CRMLibrary.UI/Views/Shared/_ValidationScriptsPartial.cshtml
+++ b/CRMLibrary.UI/Views/Shared/_ValidationScriptsPartial.cshtml
@@ -1,8 +1,13 @@
 <environment include="Development">
-    <script src="~/lib/jquery/jquery.js"></script>
-    <script src="~/lib/bootstrap/js/bootstrap.js"></script>
-    <script src="~/lib/jquery-validate/jquery.validate.js"></script>
-    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+    <script src="~/lib/jquery/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="~/lib/popper.js/umd/popper.min.js"></script>
+    <!-- Javascript files-->
+    @*<script src="js/jquery-3.0.0.min.js"></script>*@
+    @*<script src="js/plugin.js"></script>*@
+    <!-- sidebar -->
+    @*<script src="js/jquery.mCustomScrollbar.concat.min.js"></script>*@
+    <script src="~/js/custom.js"></script>
 </environment>
 <environment exclude="Development">
     <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.17.0/jquery.validate.min.js"
