--- a/CRMLibrary.UI/Views/Shared/_Layout.cshtml
+++ b/CRMLibrary.UI/Views/Shared/_Layout.cshtml
@@ -1,13 +1,23 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <!-- basic -->
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- mobile metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
+    <!-- site metas -->
     <title>@ViewData["Title"] - CRMLibrary.UI</title>
+    <meta name="keywords" content="books, catalog">
+    <meta name="description" content="Author: Ivan Ivashchenko, Mentor: Taras Strizhyk, Category: Books, Project: PetProject">
+    <meta name="author" content="Ivan Ivashchenko">
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.css" />
         <link rel="stylesheet" href="~/lib/bootstrap/js/bootstrap.js" />
+        <link rel="stylesheet" href="~/css/style.css">
+        <link rel="stylesheet" href="~/css/responsive.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
     </environment>
     <environment exclude="Development">
@@ -17,30 +27,67 @@
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
     </environment>
 </head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">CRMLibrary</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a asp-area="" asp-controller="Home" asp-action="Index" class="nav-link active">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a asp-area="" asp-controller="Home" asp-action="About" class="nav-link">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a asp-area="" asp-controller="Home" asp-action="Contact" class="nav-link">Contact</a>
-                    </li>
-                </ul>
+<body class="main-layout home_page">
+    <header>
+        <!-- header inner -->
+        <div class="header">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col logo_section">
+                        <div class="full">
+                            <div class="center-desk">
+                                <div class="logo">
+                                    <a asp-area="" asp-controller="Home" asp-action="Index"><img src="~/images/logo.png" alt="logo"></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-9 col-lg-9 col-md-9 col-sm-9">
+                        <div class="menu-area">
+                            <div class="limit-box">
+                                <nav class="main-menu">
+                                    <ul class="menu-area-main">
+                                        <li class="active"><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+                                        <li><a href="#mu-about">About</a></li>
+                                        <li><a href="#mu-contact">Contact</a></li>
+                                        <li class="mean-last"> <a href="#"><img src="~/images/search_icon.png" alt="#" /></a></li>
+                                        <li class="mean-last">
+                                            <div class="row">
+                                                @if (!User.Identity.IsAuthenticated)
+                                                {
+                                                    <div class="col-lg">
+                                                        <a asp-area="" asp-controller="Auth" asp-action="LogIn">Login</a>
+                                                    </div>
+                                                    <div class="col-sm">
+                                                        <a asp-area="" asp-controller="Auth" asp-action="Register">Sign up</a>
+                                                    </div>
+                                                }
+                                                else
+                                                {
+                                                    <div class="col-lg">
+                                                        <a class="text-light">@User.Identity.Name</a>
+                                                    </div>
+                                                    <div class="col-lg">
+                                                        <a asp-area="" asp-controller="Auth" asp-action="LogOut">Sign out</a>
+                                                    </div>                                                    
+                                                }
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </nav>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-    </nav>
+        <!-- end header inner -->
+    </header>
+    <!-- end header -->
 
-    <div class="container body-content">
+
+
+    <div>
         @RenderBody()
     </div>
 
